--- a/src/task-list/app.component.html
+++ b/src/task-list/app.component.html
@@ -37,10 +37,10 @@
         <!-- Remove this if you don't implement routing -->
         <ul class="filters">
             <li>
-                <a class="selected filter" class="selected" href="#/">Todos</a>
+                <a class="filter" href="#/">Todos</a>
             </li>
             <li>
-                <a class="filter" href="#/active">Pendientes</a>
+                <a class="selected filter" href="#/active">Pendientes</a>
             </li>
             <li>
                 <a class="filter" href="#/completed">Completados</a>
