--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ body {
 
 .task-listing li {
 	position: relative;
-	font-size: 24px;
+	font-size: 20px;
 	border-bottom: 1px solid #ededed;
 }
 
@@ -211,8 +211,8 @@ body {
 }
 
 .task-listing li label {
-	word-break: break-all;
-	padding: 15px 15px 15px 60px;
+	word-break: normal;
+	padding: 15px 60px 15px 60px;
 	display: block;
 	line-height: 1.2;
 	transition: color 0.4s;
@@ -229,14 +229,13 @@ body {
 	display: none;
 	position: absolute;
 	top: 0;
-	right: 10px;
+	right: 0px;
 	bottom: 0;
 	width: 40px;
 	height: 40px;
 	margin: auto 0;
 	font-size: 30px;
 	color: #cc9a9a;
-	margin-bottom: 11px;
 	transition: color 0.2s ease-out;
 }
 
